# api-docker-auth

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: .env  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/database/: db.py  db_auth.py  db_sql.py  models.py
backend/models/: produto.py  usuario.py
backend/routes/: auth.py  produtos.py
backend/security/: auth_handler.py  hash.py
backend/service/utils/: bot_telegram.py
backend/templates/: produtos.html
backend/test/: teste_api.py  teste_local.py
database/: db.py
frontend/: Dockerfile  app.js  config.js  index.html
models/: login.py  produto.py  schemas.py
postgresql/: postmaster.pid
postgresql/base/1/: 2619  2696  2840  2841  pg_internal.init
postgresql/base/16384/: 1247  1249  1259  16391  16392  16394  16395  16401  16404  2224  2579  2604  2606  2608  2610  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
postgresql/base/5/: 2619  pg_internal.init
postgresql/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
routes/: auth.py  produtos.py
security/: auth_token.py  hash.py
